[project]
name = "nonebot_plugin_ykt"
version = "0.1.5"
description = "一个基于nonebot的雨课堂自动签到插件"
authors = [
    {name = "sena-nana", email = "851183156@qq.com"},
]
dependencies = [
    "nonebot2>=2.0.0b4",
    "nonebot-adapter-onebot>=2.1.3",
    "numpy>=1.23.3",
    "playwright>=1.26.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
pre_build="pdm export -f setuppy -o setup.py"
build="python setup.py sdist"
post_build="twine upload dist/* -u sena-nana -p wjxpypi02818"